--- a/index.css
+++ b/index.css
@@ -100,7 +100,9 @@ a:visited {
 }
 
 .btn {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   background: #111;
   padding: 15px 20px;
