--- a/index.css
+++ b/index.css
@@ -74,6 +74,7 @@ a:visited {
         align-items: center;
         flex-direction: column;
         text-align: center;
+        margin-left:0;
     }
 }
 
